[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-microservice"
version = "1.0.0"
description = "A FastAPI microservice for generating and evaluating quizzes using AI"
authors = [{name = "Quiz Microservice Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "langchain-groq>=0.3.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
